--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
-  <meta name="description" content="Find us online!">
-  <meta name="author" content="Seth Cottle">
+  <title>Felix Imobersteg</title>
+  <meta name="description" content="Find me online!">
+  <meta name="author" content="Felix Imobersteg">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -67,14 +67,17 @@
         -->
 
         <!-- Your Image Here -->
+        <!--
         <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
+        -->
 
         <!-- Title -->
-        <h1>LittleLink</h1>
+        <h1>Felix Imobersteg</h1>
 
         <!-- Short Bio -->
+        <!--
         <p>LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com" target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we've just created some branded buttons and stripped out the things you won't need. 😊</p>
-
+        -->
         <!--
 
           ## Breaking down <a> attributes:
@@ -100,6 +103,16 @@
           3.) alt="Example Logo" | This alt attribute helps provides alternate text for an image, this can assist users who use screen readers.
 
         -->
+
+        <!-- LinkedIn -->
+        <a class="button button-linked" href="https://www.linkedin.com/in/feliximobersteg/" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
+        <br>
+
+        <!-- Email -->
+        <a class="button button-default" href="mailto:mail@feliximobersteg.ch" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/email.svg" alt="Email Icon">mail@feliximobersteg.ch</a>
+        <br>
 
         <!-- GitHub -->
         <!--
