--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
 
-    <!-- Themes:
-            Auto:   css/skeleton-auto.css
-            Light:  css/skeleton-light.css
-            Dark:   css/skeleton-dark.css
-     -->
-    <link rel="stylesheet" href="css/skeleton-dark.css">
+  <!-- Themes:
+          Auto:   css/skeleton-auto.css
+          Light:  css/skeleton-light.css
+          Dark:   css/skeleton-dark.css
+   -->
+  <link rel="stylesheet" href="css/skeleton-dark.css">
 
-    <!-- Brand Styles -->
-    <link rel="stylesheet" href="css/brands.css">
+  <!-- Brand Styles -->
+  <link rel="stylesheet" href="css/brands.css">
 
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/avatar.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 </head>
 
@@ -67,17 +68,14 @@
         -->
 
         <!-- Your Image Here -->
-        <!--
-        <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
-        -->
+        <img src="https://s.gravatar.com/avatar/cc5944831af8c9597c4ade9806ee1ab2?s=300" class="avatar" alt="LittleLink Logo">
 
         <!-- Title -->
         <h1>Felix Imobersteg</h1>
 
         <!-- Short Bio -->
-        <!--
-        <p>LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com" target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we've just created some branded buttons and stripped out the things you won't need. 😊</p>
-        -->
+        <p>Genesungbegleiter & Musiker</p>
+
         <!--
 
           ## Breaking down <a> attributes:
@@ -103,6 +101,21 @@
           3.) alt="Example Logo" | This alt attribute helps provides alternate text for an image, this can assist users who use screen readers.
 
         -->
+
+        <!-- Spotify -->
+        <a class="button button-spotify" href="https://open.spotify.com/artist/1W9IHynKUFbvP4y4nn1HT0?si=4KofMLxkTQCv7g_XJgO5rA" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Auf Spotify hören</a>
+        <br>
+
+        <!-- SoundCloud -->
+        <a class="button button-soundcloud" href="https://soundcloud.com/synaptism" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">Auf SoundCloud hören</a>
+        <br>
+
+        <!-- Apple Music -->
+        <a class="button button-apple-music-alt" href="https://music.apple.com/ch/artist/synaptism/1660242994" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/apple-music-white.svg" alt="Apple Music Logo">Auf Apple Music hören</a>
+        <br>
 
         <!-- LinkedIn -->
         <a class="button button-linked" href="https://www.linkedin.com/in/feliximobersteg/" target="_blank" rel="noopener">
