--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
 
         <!-- Title -->
-        <h1>LittleLink</h1>
+        <h1>Synaptism</h1>
 
         <!-- Short Bio -->
-        <p>LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com" target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we've just created some branded buttons and stripped out the things you won't need. 😊</p>
+        <p>Synaptism, aka Felix Imobersteg, is a sonic alchemist blending organic and electronic sounds to create mesmerizing electro-acoustic soundscapes. His music is an exploration of the connection between sound and consciousness, drawing inspiration from the intricacies of the human mind. Synaptism's compositions transcend traditional genres, blurring the lines between different styles of music. With a unique approach to sound design and a commitment to authenticity, his work is a testament to the limitless potential of music as an art form.</p>
 
         <!--
 
