adds synaptism.space buttons

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
-  <meta name="description" content="Find us online!">
-  <meta name="author" content="Seth Cottle">
+  <title>Synaptism</title>
+  <meta name="description" content="Listen now!">
+  <meta name="author" content="Felix Imobersteg">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -32,7 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/avatar.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
 
 </head>
 
@@ -63,13 +63,13 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
+        <img src="images/logo.png" class="avatar" alt="Synaptism Logo">
 
         <!-- Title -->
         <h1>Synaptism</h1>
 
         <!-- Short Bio -->
-        <p>Synaptism, aka Felix Imobersteg, is a sonic alchemist blending organic and electronic sounds to create mesmerizing electro-acoustic soundscapes. His music is an exploration of the connection between sound and consciousness, drawing inspiration from the intricacies of the human mind. Synaptism's compositions transcend traditional genres, blurring the lines between different styles of music. With a unique approach to sound design and a commitment to authenticity, his work is a testament to the limitless potential of music as an art form.</p>
+        <p style="hyphens: auto; text-align: justify; text-align-last: none;">Synaptism, aka Felix Imobersteg, is a sonic alchemist blending organic and electronic sounds to create mesmerizing electro-acoustic soundscapes. His music is an exploration of the connection between sound and consciousness, drawing inspiration from the intricacies of the human mind. Synaptism's compositions transcend traditional genres, blurring the lines between different styles of music. With a unique approach to sound design and a commitment to authenticity, his work is a testament to the limitless potential of music as an art form.</p>
 
         <!--
 
@@ -97,6 +97,41 @@
 
         -->
 
+        <!-- Spotify -->
+        <a class="button button-spotify" href="https://open.spotify.com/artist/1W9IHynKUFbvP4y4nn1HT0?si=4KofMLxkTQCv7g_XJgO5rA" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a>
+        <br>
+
+        <!-- Apple Music Alt -->
+        <a class="button button-apple-music-alt" href="https://music.apple.com/ch/artist/synaptism/1660242994" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/apple-music-white.svg" alt="Apple Music Logo">Listen on Apple Music</a>
+        <br>
+
+        <!-- YouTube -->
+        <a class="button button-yt" href="https://www.youtube.com/@synaptism" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">Listen on YouTube</a>
+        <br>
+
+        <!-- Bandcamp -->
+        <a class="button button-bandcamp" href="https://synaptism.bandcamp.com" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/bandcamp.svg" alt="Bandcamp Logo">Bandcamp</a>
+        <br>
+
+        <!-- Facebook -->
+        <a class="button button-faceb" href="https://www.facebook.com/synaptism" target="_blank" rel="noopener">
+            <img class="icon"src="images/icons/facebook.svg" alt="Facebook Logo">Facebook</a>
+        <br>
+
+        <!-- Instagram -->
+        <a class="button button-instagram" href="https://www.instagram.com/synaptism/" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
+        <br>
+
+        <!-- Email -->
+        <a class="button button-default" href="mailto:mail@synaptism.space" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/email.svg" alt="Email Icon">mail@synaptism.space</a>
+        <br>
+
         <!-- GitHub -->
         <!--
         <a class="button button-github" href="#" target="_blank" rel="noopener">
@@ -111,20 +146,6 @@
         <br>
         -->
 
-        <!-- Instagram -->
-        <!--
-        <a class="button button-instagram" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
-        <br>
-        -->
-
-        <!-- Facebook -->
-        <!--
-        <a class="button button-faceb" href="#" target="_blank" rel="noopener">
-            <img class="icon"src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
-        <br>
-        -->
-
         <!-- Facebook Messenger -->
         <!--
         <a class="button button-messenger" href="#" target="_blank" rel="noopener">
@@ -136,13 +157,6 @@
         <!--
         <a class="button button-linked" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
-        <br>
-        -->
-
-        <!-- YouTube -->
-        <!--
-        <a class="button button-yt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
         <br>
         -->
 
@@ -174,13 +188,6 @@
         <br>
         -->
 
-        <!-- Spotify -->
-        <!--
-        <a class="button button-spotify" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a>
-        <br>
-        -->
-
         <!-- Spotify Alt -->
         <!--
         <a class="button button-spotify-alt" href="#" target="_blank" rel="noopener">
@@ -199,13 +206,6 @@
         <!--
         <a class="button button-apple-music" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/apple-music.svg" alt="Apple Music Logo">Listen on Apple Music</a>
-        <br>
-        -->
-
-        <!-- Apple Music Alt -->
-        <!--
-        <a class="button button-apple-music-alt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/apple-music-white.svg" alt="Apple Music Logo">Listen on Apple Music</a>
         <br>
         -->
 
@@ -279,13 +279,6 @@
         <br>
         -->
 
-        <!-- Email -->
-        <!--
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/email.svg" alt="Email Icon">hello@littlelink.io</a>
-        <br>
-        -->
-
         <!-- Email Alternative -->
         <!--
         <a class="button button-default" href="#" target="_blank" rel="noopener">
@@ -302,7 +295,7 @@
 
         <!-- SoundCloud -->
         <!--
-        <a class="button button-soundcloud" href="#" target="_blank" rel="noopener">
+        <a class="button button-soundcloud" href="https://soundcloud.com/synaptism" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
         <br>
         -->
@@ -444,13 +437,6 @@
         <!--
         <a class="button button-xing" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/xing.svg" alt="xing Logo">Xing</a>
-        <br>
-        -->
-
-        <!-- Bandcamp -->
-        <!--
-        <a class="button button-bandcamp" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/bandcamp.svg" alt="Bandcamp Logo">Bandcamp</a>
         <br>
         -->
 
