--- a/privacy.html
+++ b/privacy.html
@@ -30,7 +30,7 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/avatar.png" />
+    <link rel="icon" type="image/png" href="images/logo.png" />
 
   </head>
 
