--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
         <a class="button button-instagram" href="https://www.instagram.com/synaptism/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
+        
+        <!-- Buy Me a Coffee -->
+        <a class="button button-coffee" href="https://www.buymeacoffee.com/synaptism" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/coffee.svg" alt="Buy Me a Coffee">Buy Me a Coffee</a>
+        <br>
 
         <!-- Email -->
         <a class="button button-default" href="mailto:mail@synaptism.space" target="_blank" rel="noopener">
@@ -528,13 +533,6 @@
         <!--
         <a class="button button-web" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/web.svg" alt="Web Logo">Website</a>
-        <br>
-        -->
-
-        <!-- Buy Me a Coffee -->
-        <!--
-        <a class="button button-coffee" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/coffee.svg" alt="Buy Me a Coffee">Buy Me a Coffee</a>
         <br>
         -->
 
