--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1>Felix Imobersteg</h1>
 
         <!-- Short Bio -->
-        <p>Genesungbegleiter & Musiker</p>
+        <p>Mensch</p>
 
         <!--
 
