--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="https://s.gravatar.com/avatar/cc5944831af8c9597c4ade9806ee1ab2?s=300" class="avatar" alt="LittleLink Logo">
+        <img src="https://s.gravatar.com/avatar/cc5944831af8c9597c4ade9806ee1ab2?s=300" class="avatar" alt="Avatar">
 
         <!-- Title -->
         <h1>Felix Imobersteg</h1>
