--- a/privacy.html
+++ b/privacy.html
@@ -30,7 +30,7 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/logo.png" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   </head>
 
